--- a/package.json
+++ b/package.json
@@ -8,18 +8,20 @@
         "preview": "vite preview",
         "test": "vitest",
         "test:unit": "vitest run",
-        "test:e2e": "playwright test"
+        "test:e2e": "npx playwright test"
     },
     "dependencies": {
+        "@playwright/test": "^1.52.0",
         "vue": "^3.4.0",
         "vue-router": "^4.2.0"
     },
     "devDependencies": {
+        "@types/node": "^22.15.18",
         "@vitejs/plugin-vue": "^5.0.0",
-        "vite": "^5.0.0",
-        "vitest": "^1.3.0",
-        "jsdom": "^22.0.0",
         "@vue/test-utils": "^2.4.1",
-        "playwright": "^1.44.0"
+        "jsdom": "^22.0.0",
+        "playwright": "^1.44.0",
+        "vite": "^5.0.0",
+        "vitest": "^1.3.0"
     }
 }
